tests/baselines/reference/genericAndNonGenericOverload1.errors.txt
genericAndNonGenericOverload1.ts(6,1): error TS2454: Variable 'c2' is used before being assigned.


==== genericAndNonGenericOverload1.ts (1 errors) ====
    interface callable2<T> {
        (a: T): T;
        <Z>(a: T): Z;
    }
    var c2: callable2<number>;
    c2<string>(1);
    ~~
!!! error TS2454: Variable 'c2' is used before being assigned.